2001-10-29  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* mode.h: Virtualise kz.
	* field.cpp: Ditto.
	* interface.cpp: Ditto.
	* stack.cpp: Ditto.
	* S_scheme.cpp: Ditto.
	* T_scheme.cpp: Ditto.
	* S_scheme_fields.cpp: Ditto.
	* T_scheme_fields.cpp: Ditto.
	* bloch.cpp: Ditto.
	* camfr_wrap.cpp: Ditto.
	
2001-10-02  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * defs.h: Add support fow TE_TM polarisation.
	* defs.cpp: Ditto.
	* camfr_wrap.cpp: Ditto.
	