@@ -1,3 +1,8 @@
+2001-11-21  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
+
+	* bloch.h: Add S_flux.
+	* camfr_wrap.cpp: Ditto.
+
 2001-10-29  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
 	* mode.h: Virtualise kz.
